# rekdb

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  README.md  main.cpp  server.cpp  server.hpp
configs/: settings.toml
tests/: CMakeLists.txt  base_tests.cpp  main.cpp  server_tests.cpp
